--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Hello les M1!</h1>
-<h2>{{title}}</h2>
+<h1>Interface graphique du composant père AppComponent</h1>
+<h2>Ci-dessous l'interface graphique du composant fils :</h2>
+<app-assignments></app-assignments>
