--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>Interface graphique du composant père AppComponent</h1>
-<h2>Ci-dessous l'interface graphique du composant fils :</h2>
-<app-assignments></app-assignments>
+<h1>
+  <nav>
+    <a routerLink="/home">{{title}}</a>
+  </nav>
+</h1>
+<mat-slide-toggle color="primary" (click)="login()">Login</mat-slide-toggle>
+
+<router-outlet></router-outlet>
